"Documented Java 11 Collection Factory Methods and other enhancements"