@@ -11,7 +11,9 @@ This module demonstrates the key features introduced in Java 8, providing practi
 6. [Date/Time API](#datetime-api)
 7. [CompletableFuture](#completablefuture)
 8. [Nashorn JavaScript Engine](#nashorn-javascript-engine)
-9. [Memory Management and Performance](#memory-management-and-performance)
+9. [Map Enhancements](#map-enhancements)
+10. [Base64 Encoding/Decoding](#base64-encodingdecoding)
+11. [Type Inference Improvements](#type-inference-improvements)
 
 ## Lambda Expressions
 
@@ -34,9 +36,8 @@ Consumer<String> consumer = message -> {
 ```
 
 ### Key Classes
-- `EventSystem`: Demonstrates event handling using lambdas
-- `LambdaExamples`: Collection of lambda usage patterns
-- `FunctionalInterfaceExamples`: Custom functional interfaces
+- `LambdaExamples`: Collection of lambda usage patterns and functional interfaces
+- `Vehicle`: Demonstrates lambda usage with default methods
 
 ## Stream API
 
@@ -55,6 +56,12 @@ List<String> filtered = list.stream()
 long count = list.parallelStream()
     .filter(s -> s.length() > 5)
     .count();
+
+// Complex operations
+int sumOfSquares = numbers.stream()
+    .filter(n -> n % 2 == 0)
+    .mapToInt(n -> n * n)
+    .sum();
 ```
 
 ### Key Operations
@@ -95,40 +102,28 @@ Default methods allow adding new methods to interfaces without breaking existing
 
 ### Examples
 ```java
-public interface MyInterface {
-    default void newMethod() {
-        System.out.println("Default implementation");
+public interface Vehicle {
+    default String startEngine() {
+        return "Starting engine of " + getBrand();
+    }
+    
+    String getBrand();
+}
+
+public class Car implements Vehicle {
+    private String brand;
+    
+    @Override
+    public String getBrand() {
+        return brand;
     }
 }
 ```
 
-### Use Cases
-- API evolution
-- Multiple inheritance behavior
-- Optional functionality in interfaces
-
-## Method References
-
-### Overview
-Method references provide a shorthand notation for lambda expressions.
-
-### Types
-1. Static Methods: `ClassName::staticMethod`
-2. Instance Methods: `instance::method`
-3. Constructor References: `ClassName::new`
-
-### Examples
-```java
-// Static method reference
-Function<String, Integer> parser = Integer::parseInt;
-
-// Instance method reference
-String str = "Hello";
-Supplier<Integer> lengthSupplier = str::length;
-
-// Constructor reference
-Supplier<List<String>> listSupplier = ArrayList::new;
-```
+### Key Classes
+- `Vehicle`: Interface with default methods
+- `Car`: Basic implementation
+- `ElectricCar`: Custom implementation overriding defaults
 
 ## DateTime API
 
@@ -163,18 +158,20 @@ LocalDate parsed = LocalDate.parse("2023-01-01", formatter);
 ### Overview
 CompletableFuture provides a way to write asynchronous, non-blocking code.
 
-### Features
-- Chaining operations
-- Exception handling
-- Combining multiple futures
-- Timeout handling
-
 ### Examples
 ```java
 CompletableFuture<String> future = CompletableFuture
     .supplyAsync(() -> "Hello")
     .thenApply(String::toUpperCase)
     .thenCompose(s -> CompletableFuture.supplyAsync(() -> s + " World"));
+
+// Parallel processing
+List<CompletableFuture<String>> futures = inputs.stream()
+    .map(input -> CompletableFuture.supplyAsync(() -> processInput(input)))
+    .collect(Collectors.toList());
+
+CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
+    .thenRun(() -> System.out.println("All tasks completed"));
 ```
 
 ## Nashorn JavaScript Engine
@@ -184,554 +181,115 @@ Nashorn provides JavaScript runtime for executing JavaScript code from Java appl
 
 ### Examples
 ```java
-ScriptEngineManager manager = new ScriptEngineManager();
-ScriptEngine engine = manager.getEngineByName("nashorn");
+// Basic evaluation
+ScriptEngine engine = new ScriptEngineManager().getEngineByName("nashorn");
 engine.eval("print('Hello from JavaScript!');");
+
+// Java-JavaScript interop
+engine.put("javaString", "Hello from Java!");
+engine.eval("print(javaString);");
+
+// Complex operations
+engine.eval(
+    "var person = {" +
+    "   name: 'John'," +
+    "   age: 30," +
+    "   toString: function() { " +
+    "       return this.name + ' is ' + this.age + ' years old';" +
+    "   }" +
+    "};"
+);
 ```
 
-### Features
-- JavaScript execution
-- Java-JavaScript interop
-- Script file loading
-- JavaScript object manipulation
+## Map Enhancements
 
-## Memory Management and Performance
+### Overview
+Java 8 introduced several new methods to the Map interface for more convenient operations.
 
-### JVM Memory Structure in Java 8
+### Key Features
+- `computeIfAbsent()`: Compute value if key is absent
+- `computeIfPresent()`: Compute value if key is present
+- `merge()`: Merge entries
+- `forEach()`: Iterate over entries
+- `getOrDefault()`: Get value with default
 
-1. **Heap Memory**
-   ```
-   Heap
-   ├── Young Generation
-   │   ├── Eden Space
-   │   ├── Survivor Space 1
-   │   └── Survivor Space 2
-   └── Old Generation
-   ```
+### Examples
+```java
+// Compute if absent
+map.computeIfAbsent("key", k -> "value");
 
-2. **Memory Settings**
-   ```bash
-   # JVM Arguments
-   -Xms2g                 # Initial heap size
-   -Xmx4g                 # Maximum heap size
-   -XX:MetaspaceSize=256m # Initial Metaspace size
-   -XX:MaxMetaspaceSize=512m # Maximum Metaspace size
-   ```
+// Merge values
+map.merge("key", "value", (v1, v2) -> v1 + "-" + v2);
 
-### Garbage Collection
-
-1. **Available Collectors**
-   ```bash
-   # Serial GC
-   -XX:+UseSerialGC
-
-   # Parallel GC (Default in Java 8)
-   -XX:+UseParallelGC
-   -XX:ParallelGCThreads=4
-
-   # CMS (Concurrent Mark Sweep)
-   -XX:+UseConcMarkSweepGC
-
-   # G1 GC
-   -XX:+UseG1GC
-   ```
-
-2. **GC Monitoring**
-   ```bash
-   # Enable GC logging
-   -XX:+PrintGCDetails
-   -XX:+PrintGCDateStamps
-   -Xloggc:gc.log
-   ```
-
-### Performance Optimization
-
-1. **Lambda and Stream Optimization**
-   ```java
-   // Avoid excessive boxing/unboxing
-   IntStream.range(0, 1000)  // Better than Stream<Integer>
-           .filter(i -> i % 2 == 0)
-           .sum();
-
-   // Use parallel streams appropriately
-   list.parallelStream()     // Only for CPU-intensive tasks
-       .filter(heavy::compute)
-       .collect(Collectors.toList());
-   ```
-
-2. **Collection Performance**
-   ```java
-   // ArrayList vs LinkedList
-   List<String> arrayList = new ArrayList<>();  // Better for random access
-   List<String> linkedList = new LinkedList<>(); // Better for insertions
-
-   // HashMap initial capacity
-   Map<String, String> map = new HashMap<>(initialCapacity);
-   ```
-
-3. **Memory Leaks Prevention**
-   ```java
-   // Proper resource cleanup
-   try (Stream<String> stream = Files.lines(path)) {
-       // Process stream
-   }
-
-   // Clear ThreadLocal
-   private static final ThreadLocal<User> userContext = new ThreadLocal<>();
-   // Clear when done
-   userContext.remove();
-   ```
-
-### Profiling and Monitoring
-
-1. **JVM Tools**
-   ```bash
-   # Memory dump
-   jmap -dump:format=b,file=heap.bin <pid>
-
-   # Thread dump
-   jstack <pid>
-
-   # JVM statistics
-   jstat -gcutil <pid> 1000
-   ```
-
-2. **Visual VM Configuration**
-   ```properties
-   # visualvm.properties
-   visualvm.display.name=Java8App
-   visualvm.jmx.port=3333
-   ```
-
-### Performance Testing
-
-1. **JMH Benchmarks**
-   ```java
-   @Benchmark
-   @BenchmarkMode(Mode.AverageTime)
-   @OutputTimeUnit(TimeUnit.MICROSECONDS)
-   public void measureStreamPerformance() {
-       // Benchmark code
-   }
-   ```
-
-2. **Load Testing**
-   ```xml
-   <dependency>
-       <groupId>org.apache.jmeter</groupId>
-       <artifactId>ApacheJMeter_core</artifactId>
-       <version>5.5</version>
-       <scope>test</scope>
-   </dependency>
-   ```
-
-### Best Practices
-
-1. **Memory Management**
-   - Use appropriate collection sizes
-   - Clear collections when no longer needed
-   - Avoid memory leaks in caches
-   - Monitor heap usage
-
-2. **Stream Operations**
-   - Use primitive streams when possible
-   - Close streams properly
-   - Consider parallel processing overhead
-   - Avoid infinite streams
-
-3. **Resource Management**
-   - Use try-with-resources
-   - Implement AutoCloseable
-   - Clear ThreadLocal variables
-   - Monitor thread pools
-
-### Monitoring Configuration
-
-1. **JMX Setup**
-   ```xml
-   <!-- Enable JMX -->
-   <jvmArguments>
-       -Dcom.sun.management.jmxremote
-       -Dcom.sun.management.jmxremote.port=9010
-       -Dcom.sun.management.jmxremote.authenticate=false
-       -Dcom.sun.management.jmxremote.ssl=false
-   </jvmArguments>
-   ```
-
-2. **Metrics Collection**
-   ```java
-   // Custom metrics
-   @Metric
-   private Counter requestCounter;
-   
-   // Record metrics
-   requestCounter.increment();
-   ```
-
-### Common Performance Issues
-
-1. **Memory Leaks**
-   - Static collections not cleared
-   - Unclosed resources
-   - ThreadLocal variables not removed
-   - Listener references not removed
-
-2. **CPU Usage**
-   - Excessive object creation
-   - Inefficient stream operations
-   - Unnecessary boxing/unboxing
-   - Thread contention
-
-3. **I/O Operations**
-   - Unbuffered I/O
-   - Resource leaks
-   - Blocking operations in loops
-   - Large file operations
-
-### Troubleshooting Tools
-
-1. **Memory Analysis**
-   ```bash
-   # Generate heap dump
-   jmap -dump:live,format=b,file=heap.bin <pid>
-
-   # Analyze with MAT
-   java -jar mat.jar heap.bin
-   ```
-
-2. **Thread Analysis**
-   ```bash
-   # Generate thread dump
-   jstack -l <pid> > thread_dump.txt
-
-   # CPU sampling
-   jcmd <pid> JFR.start
-   ```
-
-3. **Performance Monitoring**
-   ```bash
-   # Basic monitoring
-   jstat -gcutil <pid> 1000
-
-   # Detailed monitoring
-   jcmd <pid> VM.flags
-   ```
-
-### Performance Checklist
-
-1. **Memory**
-   - [ ] Appropriate heap size
-   - [ ] GC configuration
-   - [ ] Memory leak monitoring
-   - [ ] Collection sizing
-
-2. **Threading**
-   - [ ] Thread pool sizing
-   - [ ] Deadlock detection
-   - [ ] Resource contention
-   - [ ] Thread dump analysis
-
-3. **Resource Usage**
-   - [ ] I/O operations
-   - [ ] Connection pooling
-   - [ ] Cache configuration
-   - [ ] Resource cleanup
-
-## Testing
-
-### Running Tests
-```bash
-# Run all tests
-mvn test
-
-# Run specific test class
-mvn test -Dtest=StreamExamplesTest
-
-# Run with coverage
-mvn clean test jacoco:report
+// ForEach with BiConsumer
+map.forEach((key, value) -> System.out.println(key + "=" + value));
 ```
 
-### Test Categories
-- Unit Tests: Basic feature testing
-- Integration Tests: Complex scenarios
-- Performance Tests: Stream and parallel operations
+## Base64 Encoding/Decoding
 
-## Testing Configuration
+### Overview
+Java 8 introduced built-in support for Base64 encoding and decoding.
 
-### Maven Test Setup
+### Examples
+```java
+// Basic encoding/decoding
+String encoded = Base64.getEncoder().encodeToString("Hello".getBytes());
+byte[] decoded = Base64.getDecoder().decode(encoded);
 
-1. **Surefire Plugin Configuration**
-   ```xml
-   <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-surefire-plugin</artifactId>
-       <version>3.1.2</version>
-       <configuration>
-           <!-- Run in current JVM for Java 8 compatibility -->
-           <forkCount>0</forkCount>
-           <reuseForks>false</reuseForks>
-           <!-- Disable parallel execution for thread-safety -->
-           <parallel>none</parallel>
-           <!-- Java 8 specific arguments -->
-           <argLine>
-               -Xmx512m
-               -XX:MaxPermSize=256m
-               -Djava.util.logging.config.file=src/test/resources/logging.properties
-           </argLine>
-           <!-- Include/Exclude specific test categories -->
-           <includes>
-               <include>**/*Test.java</include>
-           </includes>
-           <excludes>
-               <exclude>**/*IntegrationTest.java</exclude>
-           </excludes>
-       </configuration>
-   </plugin>
-   ```
+// URL-safe encoding
+String urlEncoded = Base64.getUrlEncoder().encodeToString("Hello?".getBytes());
 
-2. **Test Categories**
-   ```java
-   // Unit test category
-   @Tag("unit")
-   class LambdaExamplesTest {
-       @Test
-       void testLambdaExpression() {
-           // Test implementation
-       }
-   }
-
-   // Integration test category
-   @Tag("integration")
-   class StreamOperationsTest {
-       @Test
-       void testParallelStream() {
-           // Test implementation
-       }
-   }
-   ```
-
-### Test Organization
-
-1. **Package Structure**
-   ```
-   src/test/java/
-   ├── com.java.features.java8
-   │   ├── lambda/
-   │   │   ├── LambdaExamplesTest.java
-   │   │   └── FunctionalInterfaceTest.java
-   │   ├── stream/
-   │   │   ├── StreamExamplesTest.java
-   │   │   └── CollectorExamplesTest.java
-   │   ├── datetime/
-   │   │   └── DateTimeExamplesTest.java
-   │   └── optional/
-   │       └── OptionalExamplesTest.java
-   ```
-
-2. **Test Resources**
-   ```
-   src/test/resources/
-   ├── logging.properties
-   ├── test-data/
-   │   ├── stream-test-data.json
-   │   └── datetime-test-data.csv
-   └── junit-platform.properties
-   ```
-
-### Test Coverage Configuration
-
-1. **JaCoCo Plugin Setup**
-   ```xml
-   <plugin>
-       <groupId>org.jacoco</groupId>
-       <artifactId>jacoco-maven-plugin</artifactId>
-       <version>0.8.8</version>
-       <configuration>
-           <excludes>
-               <!-- Exclude generated code -->
-               <exclude>**/generated/**</exclude>
-           </excludes>
-           <rules>
-               <rule>
-                   <element>CLASS</element>
-                   <limits>
-                       <limit>
-                           <counter>LINE</counter>
-                           <value>COVEREDRATIO</value>
-                           <minimum>0.80</minimum>
-                       </limit>
-                       <limit>
-                           <counter>BRANCH</counter>
-                           <value>COVEREDRATIO</value>
-                           <minimum>0.70</minimum>
-                       </limit>
-                   </limits>
-               </rule>
-           </rules>
-       </configuration>
-   </plugin>
-   ```
-
-2. **Coverage Reports**
-   - Location: `target/site/jacoco/index.html`
-   - Metrics tracked:
-     - Line coverage
-     - Branch coverage
-     - Method coverage
-     - Class coverage
-
-### Test Execution
-
-1. **Running Tests**
-   ```bash
-   # Run all tests
-   mvn test
-
-   # Run specific test class
-   mvn test -Dtest=LambdaExamplesTest
-
-   # Run tests with coverage
-   mvn clean test jacoco:report
-
-   # Run tests by category
-   mvn test -Dgroups="unit"
-   ```
-
-2. **Debugging Tests**
-   ```bash
-   # Debug tests with remote debugging
-   mvn test -Dmaven.surefire.debug
-
-   # Run tests with verbose output
-   mvn test -X
-   ```
-
-### Test Best Practices
-
-1. **Lambda Testing**
-   - Test lambda behavior, not implementation
-   - Verify functional interface contracts
-   - Test edge cases and exceptions
-
-2. **Stream Testing**
-   ```java
-   @Test
-   void testStreamOperations() {
-       List<String> input = Arrays.asList("a", "bb", "ccc");
-       List<String> result = input.stream()
-           .filter(s -> s.length() > 1)
-           .collect(Collectors.toList());
-       
-       assertThat(result)
-           .hasSize(2)
-           .containsExactly("bb", "ccc");
-   }
-   ```
-
-3. **DateTime Testing**
-   ```java
-   @Test
-   void testDateTimeOperations() {
-       // Use fixed clock for deterministic tests
-       Clock fixedClock = Clock.fixed(
-           Instant.parse("2023-01-01T10:00:00Z"),
-           ZoneId.of("UTC")
-       );
-       LocalDateTime dateTime = LocalDateTime.now(fixedClock);
-       
-       assertThat(dateTime)
-           .hasYear(2023)
-           .hasMonth(1)
-           .hasDayOfMonth(1);
-   }
-   ```
-
-4. **Optional Testing**
-   ```java
-   @Test
-   void testOptionalHandling() {
-       Optional<String> optional = Optional.of("test");
-       
-       assertThat(optional)
-           .isPresent()
-           .hasValue("test");
-   }
-   ```
-
-### Common Test Issues
-
-1. **Thread Safety**
-   - Issue: Parallel test execution conflicts
-   - Solution: Use thread-safe collections and atomic operations
-   ```java
-   private final ConcurrentHashMap<String, String> testMap = new ConcurrentHashMap<>();
-   private final AtomicInteger counter = new AtomicInteger();
-   ```
-
-2. **Resource Management**
-   - Issue: Unclosed resources in tests
-   - Solution: Use try-with-resources and @AfterEach cleanup
-   ```java
-   @AfterEach
-   void cleanup() {
-       // Clean up resources
-       testFiles.forEach(File::delete);
-   }
-   ```
-
-3. **Time-Dependent Tests**
-   - Issue: Flaky tests due to time dependencies
-   - Solution: Use fixed clock and avoid Thread.sleep
-   ```java
-   @Test
-   void testTimeBasedOperation(@TempDir Path tempDir) {
-       Clock fixedClock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
-       // Use fixedClock in test
-   }
-   ```
-
-### Performance Testing
-
-1. **JMH Integration**
-   ```xml
-   <dependency>
-       <groupId>org.openjdk.jmh</groupId>
-       <artifactId>jmh-core</artifactId>
-       <version>1.35</version>
-       <scope>test</scope>
-   </dependency>
-   ```
-
-2. **Benchmark Example**
-   ```java
-   @State(Scope.Thread)
-   public class StreamBenchmark {
-       @Benchmark
-       public void measureStreamPerformance() {
-           // Benchmark implementation
-       }
-   }
-   ```
-
-## Dependencies
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>5.9.2</version>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
+// MIME encoding
+String mimeEncoded = Base64.getMimeEncoder().encodeToString("Hello\nWorld".getBytes());
 ```
 
-## Contributing
-1. Fork the repository
-2. Create a feature branch
-3. Add tests for new features
-4. Submit pull request
+## Type Inference Improvements
 
-## Resources
-- [Java 8 Documentation](https://docs.oracle.com/javase/8/docs/)
-- [Stream API Tutorial](https://docs.oracle.com/javase/tutorial/collections/streams/)
-- [DateTime API Guide](https://docs.oracle.com/javase/tutorial/datetime/)
+### Overview
+Java 8 improved type inference in generic method calls and lambda expressions.
+
+### Examples
+```java
+// Better constructor reference
+List<String> list = createList(ArrayList::new);
+
+// Improved method reference
+List<Integer> numbers = Arrays.asList(1, 2, 3);
+List<String> strings = transformList(numbers, Object::toString);
+
+// Generic method with intersection types
+<T extends Comparable<T> & Cloneable> Optional<T> findMax(List<T> list);
+```
+
+## Project Structure
+
+```
+java8-features/
+├── src/main/java/com/java/features/java8/
+│   ├── annotations/
+│   │   └── AnnotationExamples.java
+│   ├── base64/
+│   │   └── Base64Examples.java
+│   ├── concurrent/
+│   │   └── ConcurrentExamples.java
+│   ├── datetime/
+│   │   └── DateTimeExamples.java
+│   ├── defaultmethods/
+│   │   ├── Vehicle.java
+│   │   ├── Car.java
+│   │   └── ElectricCar.java
+│   ├── generics/
+│   │   └── GenericsExample.java
+│   ├── lambda/
+│   │   └── LambdaExamples.java
+│   ├── map/
+│   │   └── MapExamples.java
+│   ├── nashorn/
+│   │   └── NashornExample.java
+│   ├── optional/
+│   │   └── OptionalExamples.java
+│   └── streams/
+│       └── StreamsExample.java
+```
+
+Each package contains comprehensive examples and documentation for specific Java 8 features. The examples include practical use cases, best practices, and detailed comments explaining the concepts.
